# kaggle_chest_xray

./: .gitignore  LICENSE  README.md  dvc.yaml  pyproject.toml
.dvc/: config
chest_xray/: callbacks.py  prediction.py  utils.py
chest_xray/cli/: args.py  cleanup_train_data.py  convert_to_png.py  hydra.py  predict.py  split_train_val.py  train.py  validate.py
chest_xray/conf/: __init__.py  data.py  scheduler.py
chest_xray/data/: datamodule.py  dataset.py  transforms.py
chest_xray/model/: __init__.py  experiment.py  schedulers.py
conf/: config.yaml
conf/optimizer/: adamw.yaml  sgd.yaml
conf/schedulers/: cosine_annealing_with_warmup.yaml
data/: .gitignore  test.dvc  train.dvc  train_averaged.csv  train_averaged_with_fake_boxes.csv  validation.csv
