[tool.poetry]
name = "chest_xray"
version = "0.1.0"
description = ""
authors = ["Igor Korsunov <elquendi@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.8.0"
torchvision = "^0.9.0"
albumentations = "^0.5.2"
pytorch-lightning = "^1.2.4"
dvc = {extras = ["s3"], version = "^2.0.6"}
pandas = "^1.2.3"
pydicom = "^2.1.2"
hydra-core = "^1.0.6"
scikit-learn = "^0.24.1"
map-boxes = "^1.0.5"

[tool.poetry.dev-dependencies]
kaggle = "^1.5.12"

[tool.poetry.scripts]
split-train-val = 'chest_xray.cli.split_train_val:main'
train = 'chest_xray.cli.train:run'
predict = 'chest_xray.cli.predict:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
